Fixing body spacing

--- a/genshindb/static/css/style.css
+++ b/genshindb/static/css/style.css
@@ -8,7 +8,7 @@ html {
 }
 body {
   margin-bottom: 60px; /* Margin bottom by footer height */
-  min-height: 70.5rem;
+  min-height: 75rem;
   padding-top: 4.5rem;
 }
 .footer {
